# Personalized-Study

./: LICENSE  README.md  dspy_module.py  generate_sounds.py  main.py  pyproject.toml  render.yaml  requirements.txt  server.js  streamlit_app.py  vark_model.json
dataset/: TEMPLATE.md
dataset/docs/: dataset.md  quality_checklist.md
dataset/raw/: sources.md
dataset/test/: quiz_test.json  vark_test.json  video_test.json
dataset/train/: quiz_train.json  vark_train.json  video_train.json
dataset/val/: quiz_val.json  vark_val.json  video_val.json
frames/IznbxGpQsuA/: meta.json
frames/bi9IA3Xbg60/: meta.json
frames/qJ92pXj876g/: meta.json
public/: index.html  instudy.html  main.js  study.html  style.css
