[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai>=2.4.0",
    "fastapi>=0.111.0",
    "google-genai>=2.7.0",
    "google-generativeai>=0.7.0",
    "gtts>=2.5.4",
    "httpx>=0.27.0",
    "jsonlines>=4.0.0",
    "litellm>=1.83.0",
    "numpy>=1.26.4",
    "ollama>=0.6.2",
    "openai>=2.32.0",
    "openai-whisper>=20231117",
    "pdfminer-six>=20221105",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "pyttsx3>=2.99",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "soundfile>=0.13.1",
    "streamlit>=1.58.0",
    "tabulate>=0.10.0",
    "uvicorn[standard]>=0.30.0",
    "youtube-transcript-api>=1.2.4",
]
